--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,10 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    packagingOptions {
+        resources.excludes.add("META-INF/*")
+    }
 }
 
 dependencies {
@@ -50,4 +54,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.pratikbutani:MultiSelectSpinner:1.0.1'
     implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
+    // https://mavenlibs.com/maven/dependency/org.asynchttpclient/async-http-client
+
+    implementation group: 'org.asynchttpclient', name: 'async-http-client', version: '2.12.3'
 }
