--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.tinder_roush">
-
+    <meta-data android:name="io.sentry.dsn" android:value="https://06b96af913894b638d1e699871364e41@o1102756.ingest.sentry.io/6667534" />
+    <!-- Set tracesSampleRate to 1.0 to capture 100% of transactions for performance monitoring.
+       We recommend adjusting this value in production. -->
+    <meta-data android:name="io.sentry.traces.sample-rate" android:value="1.0" />
+    <!-- Enable user interaction tracing to capture transactions for various UI events (such as clicks or scrolls). -->
+    <meta-data android:name="io.sentry.traces.user-interaction.enable" android:value="true" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission
         android:name="android.permission.CAMERA"
